patch: slight refactor of the server and tests for it too.
